# mcp-gmail

./: .gitignore  app.py  gmail.py  main.py  pyproject.toml  requirements.txt
